API upgrade. Tested (#49)
* Add API endpoint to create and trigger DAGs in the same call

Moved logic from clean_dag_run into cwl.py so it can be reused.
Add --combine flag to test new API endpoint. Possible risk - can
be too slow when cleaning old dag runs, as we can't create new
dag_run with the same dag_id and run_id if the previous one wasn't
deleted.

* Add tests to travis for --combine parameter

* Add comments to functions

* Add progress field in the GET /dag_runs response

* Fix bug in progress calculation

* Refactore get_dag_runs to work fast

* Update docs

* Not important changes
